--- a/ynm-server/Cargo.toml
+++ b/ynm-server/Cargo.toml
@@ -6,6 +6,20 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.1"
-diesel = { version = "1.4.4", features = ["postgres"] }
+rocket = "0.4.5"
+rocket_codegen = "0.4.5"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
+diesel = { version = "1.4.4", features = ["postgres", "uuidv07"] }
 dotenv = "0.15.0"
+r2d2-diesel = "1.0.0"
+r2d2 = "0.8.9"
+serde = "1.0.116"
+serde_derive = "1.0.116"
+serde_json = "1.0.58"
+env_logger = "0.5.12"
+log = "0.4.6"
+
+[dependencies.rocket_contrib]
+version = "*"
+default-features = false
+features = ["json", "uuid"]
