--- a/ynm-server/Cargo.toml
+++ b/ynm-server/Cargo.toml
@@ -18,8 +18,9 @@ serde_derive = "1.0.116"
 serde_json = "1.0.58"
 env_logger = "0.5.12"
 log = "0.4.6"
+bcrypt = "0.10"
 
 [dependencies.rocket_contrib]
 version = "*"
 default-features = false
-features = ["json", "uuid"]
+features = ["json"]
