--- a/ynm-server/Cargo.toml
+++ b/ynm-server/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.58"
 env_logger = "0.5.12"
 log = "0.4.6"
 bcrypt = "0.10"
+rocket_cors = "0.5.1"
 
 [dependencies.rocket_contrib]
 version = "*"
